# ACR_SharkBot

./: .gitignore  pyproject.toml
acr_sharkbot/: __init__.py
docs/: RECORDER.md
runs/: physics_20260221_004857.csv
runs/run_20260221_012825/: frames.csv  meta.json  telemetry.csv
src/acr_sharkbot/: __init__.py  control_loop.py  dataset.py  drive_loop.py  gamepad.py  gamepad_test.py  index_runs.py  inspect_segment.py  log_physics.py  physics_struct.py  record_run.py  shm.py  summarize_runs.py
