[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acr-sharkbot"
version = "0.1.0"
description = "Telemetry and screen recorder tooling for AC Rally"
requires-python = ">=3.10"
dependencies = [
    "mss",
    "pillow",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
